# vespawd

./: .gitignore  LICENSE  README.md  new-project.bat  setup.bat  sync-orchestration.bat  vespawd.bat
main/bridge/: README.md  manifest.toml  pyproject.toml
vedaws/: .gitignore  README.md  VEDAWS_BOOTSTRAP.md  pyproject.toml
vedaws/.ai/: architect_escalation.md
vedaws/design/: 000_VISION.md  001_PHILOSOPHY.md  002_CORE.md  003_RUNTIME.md  004_WORKERS.md  005_AUTOMATION.md  006_STATE_MACHINE.md  007_PROJECT_MODEL.md  008_ARTIFACTS.md  009_MEMORY.md  010_PLUGINS.md  011_SKILLS.md  012_CONFIGURATION.md  013_SECURITY.md  014_REPOSITORY.md  015_ROADMAP.md  016_IMPLEMENTATION_PLAN.md  017_AI_PROVIDERS.md  018_AI_WORKERS.md  README.md
vedaws/docs/: API_STABILITY.md  ARCHITECTURE_AUDIT_MILESTONE_5.md  ARCHITECTURE_FREEZE_V0.5.md  ARCHITECTURE_REVIEW_V0.5.md  MILESTONE_10_SUMMARY.md  MILESTONE_11_SUMMARY.md  MILESTONE_12_SUMMARY.md  MILESTONE_13_SUMMARY.md  MILESTONE_14_SUMMARY.md  MILESTONE_15_SUMMARY.md  MILESTONE_16_SUMMARY.md  MILESTONE_5.5_SUMMARY.md  MILESTONE_6_SUMMARY.md  MILESTONE_7_SUMMARY.md  MILESTONE_8_SUMMARY.md  MILESTONE_9_SUMMARY.md  SPRINT_2_WORKER_REGISTRY.md  SPRINT_3_SUMMARY.md  SPRINT_4_SUMMARY.md  SPRINT_5_SUMMARY.md
vedaws/tests/: test_ai_providers.py  test_automation.py  test_bootstrap.py  test_cli.py  test_config.py  test_dispatch.py  test_dispatch_reporter.py  test_event_bus.py  test_event_integration.py  test_git_plugin.py  test_plugins.py  test_plugins_platform.py  test_software_plugin.py  test_state.py  test_state_cleanup.py  test_workers.py  (+3 more)
(+391 files in other folders)
