[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vespawd-bridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
markers = [
    "integration: tests requiring live Vedaws CLI",
]
